fixed the overlapping with footer issue

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,6 @@ body, html, #root {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 20px;
+  background-color: #f5f5f5;
 }
