--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
-body, html, #root {
+html {
   margin: 0;
   padding: 0;
   overscroll-behavior: none;
   display: flex;
   flex: 1;
   width: 100%;
+}
+
+body, #root {
+  margin: 0;
+  padding: 0;
+  overscroll-behavior: none;
+  width: 100%;
+  height: 100%;
 }
 
 :root {
